--- a/style/main.scss
+++ b/style/main.scss
@@ -63,7 +63,7 @@ h1.title {
   text-align: right;
 }
 
-.score-container, .best-container {
+.score-container, .best-container, .worst-container{
   $height: 25px;
 
   position: relative;
@@ -111,6 +111,10 @@ h1.title {
 
 .best-container:after {
   content: "Best"
+}
+
+.worst-container:after {
+  content: "Worst"
 }
 
 p {
@@ -479,7 +483,7 @@ hr {
     margin: 0 auto;
   }
 
-  .score-container, .best-container {
+  .score-container, .best-container, .worst-container {
     margin-top: 0;
     padding: 15px 10px;
     min-width: 40px;
