Reverse the title.

--- a/style/main.css
+++ b/style/main.css
@@ -20,7 +20,10 @@ h1.title {
   font-weight: bold;
   margin: 0;
   display: block;
-  float: left; }
+  float: left;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  transform: rotate(180deg); }
 
 @-webkit-keyframes move-up {
   0% {
