--- a/style/main.scss
+++ b/style/main.scss
@@ -44,6 +44,7 @@ h1.title {
   margin: 0;
   display: block;
   float: left;
+  @include transform(rotate(180deg));
 }
 
 @include keyframes(move-up) {
